# MusicPlayer

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  审查报告.md  逐浪音乐-MusicPlayer项目总结.pptx  需求规格说明书.md  项目开发与测试计划.md
.kiro/specs/music-library-management/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/playlist-delete-button-fix/: .config.kiro  bugfix.md  checkpoint.md  design.md  tasks.md  test-bug-condition-verification.md  test-bug-condition.md  test-preservation-verification.md  test-preservation.md
scripts/: gen-ppt.mjs
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  models.rs
src/components/: ConfirmDialog.vue  PlayerBar.vue  Sidebar.vue  SongInfoModal.vue
src/composables/: useDialog.ts
src/router/: index.ts
src/stores/: player.ts
src/utils/: format.ts  playback.ts
src/views/: LibraryView.vue  LibraryView.vue.backup  LyricsView.vue  MainLayout.vue  PlaylistView.vue  SettingsView.vue
tests/unit/utils/: format.spec.ts  playback.spec.ts
