[package]
name = "musicplayer"
version = "0.1.0"
description = "逐浪音乐 - 自用音乐播放器"
authors = ["Z-Pine"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "musicplayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "musicplayer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-notification = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.22.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2"
dirs = "5"
regex = "1"
encoding_rs = "0.8"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
